# cloisim

./: .gitattributes  .gitignore  CLAUDE.md  GEMINI.md  GPT.md  LICENSE  LICENSE-3RD-PARTY  README.md  SECURITY.md  build_gui.sh  cloi_resources  oss-pkg-info.yaml  run_bench.sh  setup.bash  test_performance.sh  test_performance_build.sh  test_performance_codes.sh  test_performance_headless_build.sh  test_performance_headless_codes.sh  world_resources
.claude/commands/: add-actor-animation.md  add-compute-shader.md  add-mesh-import.md  add-motor-controller.md  add-new-plugin.md  add-new-sensor.md  add-noise-model.md  add-protobuf-message.md  add-sdf-element.md  add-ui-feature.md  add-websocket-command.md  configure-joint-articulation.md  coordinate-conversion.md  debug-plugin-lifecycle-transport.md  debug-transport.md  manage-world-lifecycle.md  narrow-debug-fix.md  setup-material-texture.md
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/instructions/: core.instructions.md  devices.instructions.md  plugins.instructions.md  scripts-validation.instructions.md  sdf-pipeline.instructions.md  shaders.instructions.md  ui.instructions.md
.github/prompts/: critical-review.prompt.md  explain-plugin-lifecycle-slice.prompt.md  generate-editmode-tests.prompt.md  review-staged-unity-changes.prompt.md  stack-trace-to-hypothesis.prompt.md  summarize-staged-diff.prompt.md
.github/workflows/: codeql-analysis.yml
Assets/: DefaultVolumeProfile.asset  link.xml
Assets/Editor/: AutoOpenMainSceneOnStartup.cs  BurstClothEditor.cs  CreateHDRPMaterial.cs  GUIBuilder.cs  GeometryGrassGUI.cs  HDRPBuildSettingsFix.cs  HeadlessBuilder.cs  IL2CPPBuildVerificationSpike.cs  LinuxNativePluginImportTools.cs  LinuxNativePluginTools.cs  PerfTestRunner.cs  ProtoModelCompiler.cs  ROS2Inspector.cs  RemoveMissingScripts.cs  SetupHDRPAsset.cs  StrippedSceneBuildTools.cs  TMPCanvasRendererFixEditor.cs  TestResultsPathMirror.cs  URTComputeShaderRefsUpdater.cs  URTResourcesStripper.cs
Assets/Scripts/Tools/StdHash/: CMakeLists.txt  README.md  hash.cpp
Docker/: Dockerfile  README.md  start-headless.sh  start.sh
LICENSES/: MIT.txt  third_party_license.txt
ProjectSettings/: AudioManager.asset  BurstAotSettings_StandaloneLinux64.json  BurstAotSettings_StandaloneWindows.json  ClusterInputManager.asset  DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  HDRPProjectSettings.asset  InputManager.asset  MemorySettings.asset  NavMeshAreas.asset  PackageManagerSettings.asset  Physics2DSettings.asset  PresetManager.asset  ProjectAuditorSettings.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset  SceneTemplateSettings.json  TagManager.asset  TimeManager.asset  UnityConnectSettings.asset  VFXManager.asset
Release/: README.md  run.bat  run.sh
UIElementsSchema/: UIElements.xsd  UnityEditor.PackageManager.UI.xsd  UnityEditor.UIElements.Debugger.xsd  UnityEditor.UIElements.xsd  UnityEngine.UIElements.xsd
cloisim_test_ws/src/cloisim_test_app/: package.xml  setup.cfg  setup.py
cloisim_test_ws/src/cloisim_test_app/cloisim_test_app/: benchmark_compare.py  cloisim_test_node.py  comm_benchmark_node.py
cloisim_test_ws/src/cloisim_test_app/launch/: benchmark_native.launch.py  benchmark_zmq.launch.py
cloisim_test_ws/src/cloisim_test_app/notebooks/: benchmark_analysis.ipynb
cloisim_test_ws/src/cloisim_test_app/scripts/: run_benchmark.sh
ros2_native_ws/src/ros2_native_plugin/: CMakeLists.txt  package.xml
ros2_native_ws/src/ros2_native_plugin/src/: cloisim_ros2.cpp
scripts/: README.md  run-editmode-tests.sh
(+935 files in other folders)
